src/test/ui/lifetime-errors/ex2d-push-inference-variable-2.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/ex2d-push-inference-variable-2.rs:17:13
   |
LL |     let b = Ref { data: y.data };
   |             ^^^

error[E0623]: lifetime mismatch
  --> $DIR/ex2d-push-inference-variable-2.rs:18:5
   |
LL | fn foo<'a, 'b, 'c>(x: &'a mut Vec<Ref<'b, i32>>, y: Ref<'c, i32>) {
   |                                   ------------      ------------ these two types are declared with different lifetimes...
...
LL |     a.push(b);
   |     ^^^^^^^^^ ...but data from `y` flows into `x` here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0623`.
